--- a/myStyle.css
+++ b/myStyle.css
@@ -11,7 +11,7 @@ body {
 h1 {
     color: black;
     margin-left: 20px;
-    font-family: "Arial";
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 nav {
@@ -27,7 +27,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    font-family: "Arial";
+    font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     color: white;
     text-align: center;
@@ -44,7 +44,7 @@ color: black;
 text-decoration: none;
 /*font-weight:lighter;*/
 font-size: 20px;
-font-family: "Arial";
+font-family: Arial, Helvetica, sans-serif;
 }
 
 .flex-container-left {
@@ -148,3 +148,10 @@ font-family: "Arial";
 }
 
 .margin_header{ margin-left: 10px;  }
+
+.right {
+    position: absolute;
+    right: 50px;
+    width: 300px;
+    padding: 10px;
+}
