--- a/myStyle.css
+++ b/myStyle.css
@@ -114,7 +114,7 @@ font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     font-weight:bold;
     font-size: 35px;
-    font-family: Impact, Charcoal, sans-serif;
+    font-family: "Arial";
     align-content: center;
 }
 
@@ -187,3 +187,6 @@ li {
 
 }
 
+/* p {
+    text-indent: 50px;
+}*/
