--- a/myStyle.css
+++ b/myStyle.css
@@ -72,8 +72,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 
 .name_header {
-
-    text-align: center;
+   text-align: center;
 }
 
 
@@ -81,7 +80,7 @@ font-family: Arial, Helvetica, sans-serif;
     color: white;
     text-decoration: none;
     /*font-weight:bold;*/
-    font-size: 18px;
+    font-size: 16px;
     font-family: "Arial";
     text-align: left;
     margin-left: 10px
@@ -93,6 +92,7 @@ font-family: Arial, Helvetica, sans-serif;
     border: none;
     color: white;
     padding-bottom: 10px;
+    padding-right: 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
