--- a/myStyle.css
+++ b/myStyle.css
@@ -19,7 +19,14 @@ nav {
 }
 
 main {
-    margin-left: 50px;
+    margin-left: 0px;
+}
+
+main.aboutme {
+    margin-left: 0px;
+    margin-top: 15px;
+    margin-bottom: 15%
+    width:100%;
 }
 
 footer {
@@ -38,12 +45,29 @@ footer {
 }
 
 
-a
+.bottom_page {
+    position: fixed;
+right: 0;
+bottom: 0;
+color: white;
+
+}
+
+a.one
 {
 color: black;
 text-decoration: none;
 /*font-weight:lighter;*/
 font-size: 20px;
+font-family: Arial, Helvetica, sans-serif;
+}
+
+a.two
+{
+color: black;
+text-decoration: underline;
+/*font-weight:lighter;*/
+font-size: 16px;
 font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -136,7 +160,7 @@ font-family: Arial, Helvetica, sans-serif;
 
 
 
-.button_link:hover {
+.sectoins_header:hover {
     background-color: white /* Green */
     color: white;
     opacity: 20%;
@@ -173,6 +197,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 
+
 .img-circle {
     border-radius: 50%;
 }
@@ -184,10 +209,38 @@ ul {
 }
 
 li {
-    margin: 10px 0
+    margin: 10px;
 
 }
 
-/* p {
-    text-indent: 50px;
-}*/
+
+.title{
+    margin-top: 25px;
+    font-family: "Arial";
+    font-size:18px;
+    /*margin-right: 15%;*/
+    /*margin-left: 15%;*/
+    text-align: center;
+    height: 10%;
+    margin-bottom:15px;
+}
+
+
+
+.float-left {
+float:left;
+width:26%;
+margin-left: 3%;
+margin-right: 3%;
+margin-top: 10px;
+/*margin-bottom: 20%;*/
+}
+
+.float-left-first {
+float:left;
+width:30%;
+margin-left: 3%;
+margin-right: 3%;
+margin-top: -5px;
+/*margin-bottom: 20%;*/
+}
