--- a/myStyle.css
+++ b/myStyle.css
@@ -195,6 +195,12 @@ font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
 
 }
+.main_text_about {
+    font-size: 14px;
+    font-family: "Arial";
+    text-align: justify;
+
+}
 
 
 
@@ -234,6 +240,7 @@ margin-left: 3%;
 margin-right: 3%;
 margin-top: 10px;
 /*margin-bottom: 20%;*/
+overflow: auto;
 }
 
 .float-left-first {
