--- a/myStyle.css
+++ b/myStyle.css
@@ -173,23 +173,36 @@ a.two:hover {text-decoration: underline;
 .margin_header{ margin-top: 10px; margin-bottom: 00px; vertical-align: middle; text-align: center; align-content: center; }
 
 .right {
-    position: absolute;
-    right: 15%;
-    width: 22%;
-    padding-top: 5%;
+    float: right;
+    margin-right: 15%;
+    margin-left: 5%;
+    width: 30%;
+    margin-top: 5%;
+
+    /*padding-top: 5%;*/
 }
 
 
 .left {
-    position: absolute;
-    left: 15%;
-    width: 34%;
-    padding-top: 8%;
+    float: left;
+    width: 30%;
+    /*height: 5%;*/
+    overflow: auto;
+    margin-right: 5%;
+    margin-left: 15%;
+    margin-top: 5%;
+    /*padding-top: 8%;*/
 }
 
 .main_text {
     font-size: 16px;
     font-family: "Arial";
+    text-align: justify;
+
+}
+.main_text_big {
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
 
 }
@@ -214,6 +227,8 @@ a.two:hover {text-decoration: underline;
 
 .img-circle {
     border-radius: 50%;
+    display: block;
+    margin: 0 auto;
 }
 
 ul {
@@ -274,4 +289,10 @@ figcaption {
     font-family: "Arial";
     font-size:12px;
     margin-bottom: 25px;
+}
+
+.main_words_index {
+    font-family: "Arial";
+    font-size:45px;
+
 }
