--- a/myStyle.css
+++ b/myStyle.css
@@ -207,6 +207,21 @@ a.two:hover {text-decoration: underline;
 
 }
 
+.main_text_vbig {
+    font-size: 36px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin-top: 0%;
+    margin-bottom: -5px;
+    /*margin-bottom: 5%;*/
+
+}
+
+img.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+
 .main_text_about_first {
     font-size: 14px;
     font-family: "Arial";
@@ -223,6 +238,13 @@ a.two:hover {text-decoration: underline;
 
 }
 
+.main_text_contact {
+    font-size: 24px;
+    font-family: "Arial";
+    margin-top: -10px;
+    text-align: justify;
+
+}
 
 
 .img-circle {
@@ -241,6 +263,18 @@ li {
     margin: 10px;
 
 }
+
+.bigFont li{
+font-size:18px;/*
+    margin-left: auto;
+    margin-right: auto;
+*/
+align-content: center;
+margin-left: 40px;
+
+/*.small br {
+    height: 0px;
+*/}
 
 
 .title{
@@ -295,4 +329,15 @@ figcaption {
     font-family: "Arial";
     font-size:45px;
 
+}
+
+.float-left-c {
+float:left;
+width:30%;
+margin-left: 35%;
+margin-right: 35%;
+margin-top: 3%;
+/*margin-bottom: 20%;*/
+overflow: auto;
+max-height:  60%;
 }
