--- a/myStyle.css
+++ b/myStyle.css
@@ -250,7 +250,9 @@ img.displayed {
 .img-circle {
     border-radius: 50%;
     display: block;
-    margin: 0 auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 
 ul {
