--- a/myStyle.css
+++ b/myStyle.css
@@ -1,176 +1,111 @@
-header {
-  background-color: black;
-  /*margin-top: 5px;*/
-  align-content: center;
-  text-align: center;
-}
+Certainly! Here's the updated CSS file with the Open Sans font:
 
+```css
 body {
     position: relative;
     background-color: white;
-    margin:  0px;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+
+header {
+    background-color: black;
+    text-align: center;
 }
 
 h1 {
     color: black;
     margin-left: 20px;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
-
 
 main {
-    margin-left: 0px;
-}
-
-main.aboutme {
-    margin-left: 0px;
-    margin-top: 15px;
-    margin-bottom: 15%
-    width:100%;
-    overflow: auto;
+    margin-left: 0;
 }
 
 footer {
-    /*height: 20px;*/
     position: fixed;
     bottom: 0;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+a.one {
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    display: inline-block;
+    align-items: center;
     text-align: center;
-
-
+    font-family: 'Open Sans', sans-serif;
 }
 
-
-.bottom_page {
-    position: fixed;
-right: 0;
-bottom: 0;
-color: white;
-
+a.two {
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
 }
 
-img.commencement {overflow: auto;}
-
-a.one
-{
-color: black;
-text-decoration: none;
-/*font-weight:lighter;*/
-font-size: 20px;
-font-family: Arial, Helvetica, sans-serif;
-display: inline-block;
-align-items: center;
-text-align: center;
+a.two:hover {
+    text-decoration: underline;
+    color: blue;
 }
-
-a.two
-{ text-decoration: none;
-color: black;
-/*font-weight:lighter;*/
-font-size: 16px;
-font-family: Arial, Helvetica, sans-serif;
-}
-
-a.two:hover {text-decoration: underline;
-        color: blue;
-}
-
 
 .flex-container-left {
     position: fixed;
     display: -webkit-flex;
     display: inline-flex;
     -webkit-flex-direction: column;
-    /*-webkit-justify-content: space-between;*/
     flex-direction: column;
     width: 130px;
     height: 100%;
-    background-color: lightgrey;/*
-    top:; bottom:0; left:0;*/
-    line-height:1.4em;
+    background-color: lightgrey;
+    line-height: 1.4em;
     float: left;
-
 }
-
-
-
-.flex-item{
-    /*margin-left: auto;*/
-    margin:10px 15px 10px 10px;
-}
-
 
 .name_header {
-    /*margin-top: 5px;*/
     text-align: center;
 }
-
 
 .sections_header {
     color: white;
     text-decoration: none;
-    /*font-weight:bold;*/
     font-size: 16px;
-    font-family: "Arial";
     text-align: left;
-    margin-left: 5px;
-    margin-right: 5px;
-
-}
-
-.button_link {
-    background-color: black;
-    border: none;
-    color: white;
-    padding-bottom: 10px;
-    padding-right: 25px;
-    text-align: center;
-    text-decoration: none;
+    margin-left: 10px;
+    margin-right: 10px;
     display: inline-block;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.button_name {
-    background-color: black;
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-    text-decoration: none;
-    font-weight:bold;
-    font-size: 35px;
-    font-family: "Arial";
-    align-content: center;
-}
-
+.button_link,
+.button_name,
 .button_bottom {
     background-color: black;
     border: none;
     color: white;
-    padding: 15px 32px;
     text-align: center;
-    vertical-align: :align-content;
     text-decoration: none;
     display: inline-block;
-    font-size: 14px;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
-
+    cursor: pointer;
+    font-family: 'Open Sans', sans-serif;
 }
 
-
-.margin_header{ margin-top: 10px; margin-bottom: 00px; vertical-align: middle; text-align: center; align-content: center; }
+.margin_header {
+    margin-top: 10px;
+    margin-bottom: 0;
+    vertical-align: middle;
+    text-align: center;
+    align-content: center;
+}
 
 .right {
     float: right;
@@ -178,186 +113,142 @@ a.two:hover {text-decoration: underline;
     margin-left: 5%;
     width: 20%;
     margin-top: 5%;
-
-    /*padding-top: 5%;*/
 }
 
 .photo {
     float: none;
     width: 80%;
-    /*height: 5%;*/
     overflow: auto;
     margin-right: 15%;
     margin-left: 15%;
     margin-top: 8%;
-    font-size:x-large;
-    /*padding-top: 8%;*/
+    font-size: x-large;
 }
 
 .left {
     float: left;
     width: 40%;
-    /*height: 5%;*/
     overflow: auto;
     margin-right: 5%;
     margin-left: 15%;
     margin-top: 8%;
-    /*padding-top: 8%;*/
 }
 
 .main_text {
     font-size: 16px;
-    font-family: "Arial";
     text-align: justify;
-
 }
+
 .main_text_big {
     font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-
 }
 
 .main_text_vbig {
     font-size: 36px;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top: 0%;
     margin-bottom: -5px;
-    /*margin-bottom: 5%;*/
-
 }
 
 img.displayed {
     display: block;
     margin-left: auto;
-    margin-right: auto }
+    margin-right: auto;
+}
 
 .main_text_about_first {
     font-size: 14px;
-    font-family: "Arial";
     text-align: justify;
-
 }
-
 
 .main_text_about {
     font-size: 14px;
-    font-family: "Arial";
     margin-top: -10px;
     text-align: justify;
-
 }
 
 .main_text_contact {
     font-size: 24px;
-    font-family: "Arial";
     margin-top: -10px;
     text-align: justify;
-
 }
-
 
 .img-circle {
     border-radius: 50%;
     display: block;
-    display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 }
 
 ul {
     font-size: 16px;
-    font-family: "Arial";
-
 }
 
 li {
     margin: 10px;
-
 }
 
-.bigFont li{
-font-size:18px;/*
-    margin-left: auto;
-    margin-right: auto;
-*/
-align-content: center;
-margin-left: 40px;
+.bigFont li {
+    font-size: 18px;
+    align-content: center;
+    margin-left: 40px;
+}
 
-/*.small br {
-    height: 0px;
-*/}
-
-
-.title{
+.title {
     margin-top: 25px;
-    font-family: "Arial";
-    font-size:18px;
-    /*margin-right: 15%;*/
-    /*margin-left: 15%;*/
+    font-size: 18px;
     text-align: center;
     height: 10%;
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
 
-
-
 .float-left {
-float:left;
-width:30%;
-margin-left: 3%;
-margin-right: 3%;
-margin-top: 10px;
-/*margin-bottom: 20%;*/
-overflow: auto;
+    float: left;
+    width: 30%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 10px;
+    overflow: auto;
 }
 
 .float-left-first {
-float:left;
-width:20%;
-margin-left: 3%;
-margin-right: 5%;
-margin-top: -10px;
-/*margin-bottom: 20%;*/
+    float: left;
+    width: 20%;
+    margin-left: 3%;
+    margin-right: 5%;
+    margin-top: -10px;
 }
 
-
-.mod_br {height: 15px;
+.mod_br {
+    height: 15px;
     background-color: black;
-    width: 100%;}
-.mod_br_small {height: 5px;
-    background-color: black;
-    width: 100%;}
+    width: 100%;
+}
 
-.footer_blank {height: 20px; margin-top: 20px;}
+.mod_br_small {
+    height: 5px;
+    background-color: black;
+    width: 100%;
+}
+
+.footer_blank {
+    height: 20px;
+    margin-top: 20px;
+}
 
 figcaption {
-    font-family: "Arial";
-    font-size:12px;
+    font-size: 12px;
     margin-bottom: 25px;
 }
 
 .main_words_index {
-    font-family: "Arial";
-    font-size:45px;
-
+    font-size: 45px;
 }
 
 .image-container {
     width: 35%;
-    margin-left: 20px; /* Adjust the left margin as needed */
-    margin-right: 20px; /* Add margin to the right */
+    margin-left: 20px;
+    margin-right: 20px;
 }
-
-
-.float-left-c {
-float:left;
-width:30%;
-margin-left: 35%;
-margin-right: 35%;
-margin-top: 3%;
-/*margin-bottom: 20%;*/
-overflow: auto;
-max-height:  60%;
-}
+```
