--- a/myStyle.css
+++ b/myStyle.css
@@ -252,6 +252,7 @@ figcaption {
     width: 35%;
     margin-left: 20px;
     margin-right: 20px;
+    padding-top: 5%;
 }
 
 .ex1 {
@@ -262,5 +263,6 @@ figcaption {
     font-weight: bold;
     text-align: justify;
     font-family: 'Open Sans', sans-serif;
+    margin-bottom: 0; /* Add this to reduce the bottom margin */
 }
 
