--- a/myStyle.css
+++ b/myStyle.css
@@ -1,7 +1,7 @@
 body {
     position: relative;
+    margin-bottom: 60px; /* Adjust this value based on your footer height */
     background-color: white;
-    margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -25,11 +25,11 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 60px; /* Adjust this value based on your footer height */
     font-size: 14px;
     background-color: black;
     color: white;
     text-align: center;
-    padding: 10px; /* Add padding for better visibility */
     font-family: 'Open Sans', sans-serif;
 }
 
