--- a/myStyle.css
+++ b/myStyle.css
@@ -25,12 +25,17 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px; /* Adjust this value based on your footer height */
+    height: 20px; /* Adjust this value based on your footer height */
     font-size: 14px;
     background-color: black;
     color: white;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
 }
 
 footer a.linkedin-logo {
