--- a/myStyle.css
+++ b/myStyle.css
@@ -11,6 +11,12 @@ header {
     font-size: 24px;
 }
 
+    .main_text-container li {
+        text-indent: 10px; /* Adjust the value as needed */
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
 h1 {
     color: black;
     margin-left: 20px;
