new website jan 2025

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ header .logo {
 }
 
 blockquote {
-  background: url('IMG_7449.jpg') no-repeat center center;
+  background: url('IMG_7449.JPG') no-repeat center center;
   background-size: cover;
   padding: 40px 20px; /* Add padding for spacing */
   border-left: 5px solid #F4A261;
